Add web appearance settings
